syntax = "proto3";
package mcts;

import "google/protobuf/duration.proto";
import "tptp.proto";
import "solutions.proto";

message Model {
  bytes xgb = 1;
}

message ModelSet {
  Model priority = 1;
  Model reward = 2;
}

message LibSVM {
  message Feature {
    uint64 index = 1;
    double value = 2;
  }
  message Instance {
    double label = 2;
    repeated Feature features = 1;
  }
  repeated Instance instances = 1;
  uint64 features_space_size = 2;
}

message Input {
  tptp.File problem = 1;
  google.protobuf.Duration timeout = 2;

  bool full_search = 5;
  uint64 features_space_size = 6;
  ModelSet models = 9;
  
  uint64 playouts_per_bigstep = 7;
  uint64 playout_depth = 8;
}

message Stats {
  uint64 bigsteps = 1;
  uint64 playouts = 2;
  uint64 inferences = 3;

  double realtime_sec = 4;
  double cpu_sec = 5;
  uint64 cpu_cycles = 6;
}

enum Status {
  UNSPECIFIED = 0;
  THEOREM = 1;
  DEADEND = 2;
  RESOURCE_OUT = 3;
  KILLED = 4;
}

message Output {
  Status status = 1;
  solutions.Proof proof = 6;

  LibSVM priority = 2;
  LibSVM reward = 3;

  Stats stats = 4;
  solutions.Profiler profiler = 5;
}
